--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: nmos-node
 Maintainer: Andrew Bonney <andrew.bonney@bbc.co.uk>
 Section: python
 Priority: optional
-Build-Depends: python-all (>= 2.6.6-3), debhelper (>= 7), dh-python
+Build-Depends: python-all (>= 2.6.6-3), debhelper (>= 7), dh-python, python-setuptools
 Standards-Version: 3.9.1
 
 Package: nmos-node
