--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,3 @@
 recursive-include debian *
-recursive-include etc *
 recursive-include bin *
-recursive-include lib *
-include README
+include README.md
