--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
-Source: nmos-node
-Maintainer: Andrew Bonney <andrew.bonney@bbc.co.uk>
+Source: python-nodefacade
+Maintainer: Peter Brightwell <peter.brightwell@bbc.co.uk>
 Section: python
 Priority: optional
-Build-Depends: python-all (>= 2.6.6-3), debhelper (>= 7), dh-python, python-setuptools
-Standards-Version: 3.9.1
+Build-Depends: python-all (>= 2.6.6-3), debhelper (>= 7), dh-python, python-setuptools, dh-systemd, dh-apache2
+Standards-Version: 3.9.7
 
-Package: nmos-node
+Package: python-nodefacade
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, nmos-common, reverse-proxy
-Recommends: lldpd
+Depends: ${misc:Depends}, ${python:Depends}, python-systemd
+Recommends: lldpd, python-nmoscommon, ips-reverseproxy-common, python-mdnsbridge
 Description: Node facade for service registration and aggregation
  See www.nmos.tv for more details
