Re-name interface hooks and alter git ignore file for dealing with debian packaging better

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.swp
 *.pyc
 debian/python-nodefacade
-debian/python-nodefacade.*
+debian/python-nodefacade.substvars
+debian/python-nodefacade*debhelper*
 build/
 debian/files
