--- a/debian/python-nodefacade.service
+++ b/debian/python-nodefacade.service
@@ -12,5 +12,4 @@ ExecStart=/usr/bin/nmosnode
 
 [Install]
 WantedBy=multi-user.target
-Alias=nmos-node.service
-Alias=ips-nodefacade.service
+Alias=nmos-node.service ips-nodefacade.service
