--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,3 +1,4 @@
 [DEFAULT]
+Depends: python-six, python-systemd, python-nmoscommon
 Recommends: lldp, ips-reverseproxy-common, python-mdnsbridge
 Build-Depends: apache2-dev, dh-python, dh-systemd
