stdeb: change nmoscommon to recommend for external installs

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
-Depends: python-six, python-systemd, python-nmoscommon
-Recommends: lldp, ips-reverseproxy-common, python-mdnsbridge
+Depends: python-six, python-systemd
+Recommends: lldp, ips-reverseproxy-common, python-mdnsbridge, python-nmoscommon
 Build-Depends: apache2-dev, dh-python, dh-systemd
