tox: conform file to defaults used elsewhere

--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,30 @@
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
 
-[tox]
-envlist = py27, py3
+# This file is set up for environments of the form:
+#  py{*}-{test,nose}[-coverage]
+# Though the env-list is more restricted so that tox without parameters runs
+# something sensible.
 
-[testenv]
-commands = nose2 --with-coverage --coverage-report=annotate --coverage-report=term --coverage=nmosnode
+[tox]
+envlist = py{27,3}
+
+[testenv:py27]
+commands =
+    coverage run --source=./nmosnode -m unittest discover -s tests
+    coverage annotate
+    coverage report
 deps =
-    nose2
+    coverage
     mock
+install_command = pip install {opts} {packages}
+
+[testenv:py3]
+commands =
+    coverage run --source=./nmosnode -m unittest discover -s tests
+    coverage annotate
+    coverage report
+deps =
+    coverage
+    mock
+install_command = pip install {opts} {packages}
