--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-Depends: python-six, python-systemd
+Depends: python-six, python-systemd, python-requests, python-gevent
 Recommends: lldp, ips-reverseproxy-common, python-mdnsbridge, python-nmoscommon
-Depends3: python3-six, python3-systemd
+Depends3: python3-six, python3-systemd, python3-requests, python3-gevent
 Recommends3: lldp, ips-reverseproxy-common, python3-mdnsbridge, python3-nmoscommon
 Build-Depends: apache2-dev, dh-python, dh-systemd
