Add Python 3 packaging

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,6 @@
 [DEFAULT]
 Depends: python-six, python-systemd
 Recommends: lldp, ips-reverseproxy-common, python-mdnsbridge, python-nmoscommon
+Depends3: python3-six, python3-systemd
+Recommends3: lldp, ips-reverseproxy-common, python3-mdnsbridge, python3-nmoscommon
 Build-Depends: apache2-dev, dh-python, dh-systemd
