Execute using Python3 (#51)
* add replaces lines to stdeb

* change shebang and executable

* patch version bump

--- a/debian/python-nodefacade.service
+++ b/debian/python-nodefacade.service
@@ -8,7 +8,7 @@ Type=notify
 User=ipstudio
 Restart=always
 RestartSec=3
-ExecStart=/usr/bin/nmosnode
+ExecStart=/usr/bin/python2 /usr/bin/nmosnode
 
 [Install]
 WantedBy=multi-user.target
