--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,8 +1,8 @@
 [DEFAULT]
 Depends: ips-reverseproxy-common, python-six, python-systemd, python-requests, python-gevent, python-mdnsbridge, python-nmoscommon
-Recommends: lldp
+Recommends: lldpd
 Depends3: python3-nmosreverseproxy, python3-six, python3-systemd, python3-requests, python3-gevent, python3-mdnsbridge, python3-nmoscommon
-Recommends3: lldp
+Recommends3: lldpd
 Build-Depends: apache2-dev, dh-python, dh-systemd
 Provides: python3-nodefacade
 Conflicts: python3-nodefacade
