Add expontential backoff and 409 support (#50)
Add exponential backoff when registration with all aggregators has been attempted and they have returned with server side errors
Add support for handling HTTP 409 response

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
-Depends: ips-reverseproxy-common, python-six, python-systemd, python-requests, python-gevent, python-mdnsbridge, python-nmoscommon
+Depends: ips-reverseproxy-common, python-six, python-systemd, python-requests, python-gevent, python-mdnsbridge (>=0.9.0), python-nmoscommon
 Recommends: lldpd
-Depends3: python3-nmosreverseproxy, python3-six, python3-systemd, python3-requests, python3-gevent, python3-mdnsbridge, python3-nmoscommon
+Depends3: python3-nmosreverseproxy, python3-six, python3-systemd, python3-requests, python3-gevent, python3-mdnsbridge (>=0.9.0), python3-nmoscommon
 Recommends3: lldpd
 Build-Depends: apache2-dev, dh-python, dh-systemd
 Provides: python3-nodefacade
